--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "mido>=1.2.0",
     "fastapi>=0.68.0",
     "uvicorn>=0.15.0",
+    "websockets>=10.0",
 ]
 
 [project.optional-dependencies]
@@ -45,6 +46,12 @@ dev = [
     "mypy>=0.950",
     "sphinx>=4.5.0",
     "jupyter>=1.0.0",
+]
+audio = [
+    "sounddevice>=0.4.0",
+]
+web = [
+    "jinja2>=3.0.0",
 ]
 
 [project.scripts]
